# ixchel

./: .gitignore  .pre-commit-config.yaml  AGENTS.md  Cargo.toml  IDEAS.md  README.md  cliff.toml  dist-workspace.toml  dprint.json  release-plz.toml  rustfmt.toml
.decisions/: 003-binary-installation-strategy.md  004-trait-based-storage-architecture.md
.helix/: config.toml
.ixchel/: config.toml
.ruler/: AGENTS.md  ruler.toml
adr-search/: Cargo.toml  README.md
adr-search/specs/: design.md  requirements.md  tasks.md
adr-search/src/: delta.rs  embeddings.rs  lib.rs  loader.rs  main.rs  searcher.rs  storage.rs  types.rs
apps/demo-got/: .gitignore  AGENTS.md  Cargo.toml  README.md
apps/demo-got/data/: aegon-i.md  aegon-v.md  aerys-ii.md  arya-stark.md  benjen-stark.md  bran-stark.md  brandon-stark-elder.md  catelyn-stark.md  cersei-lannister.md  daenerys-targaryen.md  edmure-tully.md  gendry.md  hoster-tully.md  joffrey-baratheon.md  jon-snow.md  lyanna-stark.md  lysa-tully.md  ned-stark.md  renly-baratheon.md  rhaegar-targaryen.md  rhaella-targaryen.md  rickard-stark.md  rickon-stark.md  robb-stark.md  robert-baratheon.md  sansa-stark.md  shireen-baratheon.md  stannis-baratheon.md  steffon-baratheon.md  viserys-targaryen.md  westeros.yaml
apps/demo-got/specs/: design.md  requirements.md  tasks.md
apps/demo-got/src/: backend.rs  error.rs  lib.rs  loader.rs  main.rs  query.rs  storage.rs  types.rs
apps/demo-got/src/storage/: helixdb.rs  mod.rs  surrealdb.rs
apps/hbd-ui/src-tauri/: AGENTS.md  Cargo.toml  README.md  tauri.conf.json
apps/hbd-ui/src-tauri/specs/: design.md  requirements.md  tasks.md
apps/hbd-ui/src-tauri/src/: main.rs
apps/ix-cli/: AGENTS.md  Cargo.toml  README.md
apps/ix-cli/specs/: design.md  requirements.md  tasks.md
apps/ix-cli/src/: main.rs
apps/ix-daemon/: AGENTS.md  CHANGELOG.md  Cargo.toml  README.md
apps/ix-daemon/specs/: design.md  requirements.md  tasks.md
apps/ix-daemon/src/: client.rs  lib.rs  queue.rs  server.rs  watcher.rs  worker.rs
apps/ix-daemon/tests/: integration.rs
apps/ix-mcp/: AGENTS.md  CHANGELOG.md  Cargo.toml  README.md
apps/ix-mcp/specs/: design.md  requirements.md  tasks.md
apps/ix-mcp/src/: main.rs
crates/ix-app/: AGENTS.md  Cargo.toml  README.md
crates/ix-app/specs/: design.md  requirements.md  tasks.md
crates/ix-app/src/: lib.rs
crates/ix-config/: AGENTS.md  Cargo.toml  README.md
crates/ix-config/specs/: design.md  requirements.md
crates/ix-config/src/: lib.rs
crates/ix-core/: AGENTS.md  Cargo.toml  README.md
crates/ix-core/specs/: design.md  requirements.md  tasks.md
crates/ix-core/src/: entity.rs  id.rs  index.rs  lib.rs  markdown.rs  paths.rs  repo.rs
crates/ix-core/tests/: repo_integration.rs
crates/ix-embeddings/: AGENTS.md  CHANGELOG.md  Cargo.toml  README.md
crates/ix-embeddings/docs/: EMBEDDING_PERFORMANCE.md  MODEL_MANAGEMENT.md  PROVIDER_COMPARISON.md
crates/ix-embeddings/specs/: design.md  requirements.md  tasks.md
crates/ix-embeddings/src/: lib.rs
crates/ix-id/: AGENTS.md  Cargo.toml  README.md
crates/ix-id/specs/: design.md  requirements.md  tasks.md
crates/ix-id/src/: lib.rs
crates/ix-storage-helixdb/: AGENTS.md  Cargo.toml  README.md
crates/ix-storage-helixdb/specs/: design.md  requirements.md  tasks.md
crates/ix-storage-helixdb/src/: lib.rs
crates/ix-storage-helixdb/tests/: deterministic_sync_search.rs  e2e_sync_search.rs
crates/ix-storage-helixdb/tests/fixtures/: README.md  embedding-lifecycle-report.md  hnsw-parameter-tuning-report.md  hybrid-search-fusion-report.md  lmdb-internals-report.md  lmdb-mapsize-incident-review.md  lmdb-vs-rocksdb-comparison.md  source-alpha.md  source-beta.md
crates/ix-storage-surrealdb/: CHANGELOG.md  Cargo.toml
crates/ix-storage-surrealdb/src/: lib.rs  manifest.rs  schema.rs  types.rs
crates/ix-storage-surrealdb/tests/: deterministic_sync_search.rs
hbd/: AGENTS.md  Cargo.toml  README.md  STYLE.md
hbd/specs/: README.md  design.md  requirements.md  tasks.md
hbd/src/: db.rs  error.rs  id.rs  lib.rs  main.rs  markdown.rs  storage.rs
hbd/src/commands/: issue.rs
helix-decisions/: AGENTS.md  CONTRIBUTING.md  Cargo.toml  README.md
helix-decisions/docs/phase3/: CORRECTIONS_QUICK_REFERENCE.txt  PHASE_3_CORRECTIONS.md  PHASE_3_PLAN.md
helix-decisions/specs/: design.md  requirements.md  tasks.md
helix-decisions/src/: config.rs  delta.rs  embeddings.rs  git_utils.rs  helix_backend.rs  hooks.rs  lib.rs  loader.rs  main.rs  manifest.rs  searcher.rs  storage.rs  types.rs
helix-decisions/tests/: integration.rs
helix-decisions/tests/fixtures/.decisions/: 001-test-adr.md
helix-map/: AGENTS.md  Cargo.toml  README.md  design.md  requirements.md
helix-map/specs/: requirements.md  tasks.md
helix-map/src/: extract.rs  indexer.rs  lib.rs  main.rs  model.rs  scanner.rs  skeleton.rs  storage.rs
helix-repo/: AGENTS.md  Cargo.toml  README.md
helix-repo/specs/: design.md  requirements.md  tasks.md
helix-repo/src/: error.rs  lib.rs  main.rs
ix-core/: Cargo.toml  README.md
ix-core/specs/: design.md
ix-core/src/: config.rs  entity.rs  repo.rs
ix-core/tests/: repo_integration.rs
ix-mcp/: AGENTS.md  Cargo.toml  README.md
ix-mcp/specs/: design.md  requirements.md
ix-mcp/src/: main.rs
shared/helix-daemon/: AGENTS.md  Cargo.toml  README.md
shared/helix-daemon/specs/: design.md  requirements.md  tasks.md
shared/helix-daemon/src/: client.rs  lib.rs  queue.rs  server.rs
shared/helix-daemon/tests/: integration.rs
shared/helix-discovery/: AGENTS.md  Cargo.toml  README.md
shared/helix-discovery/specs/: design.md  requirements.md  tasks.md
shared/helix-discovery/src/: lib.rs
shared/helix-embeddings/: AGENTS.md  Cargo.toml  README.md
shared/helix-embeddings/docs/: EMBEDDING_PERFORMANCE.md  PROVIDER_COMPARISON.md
shared/helix-embeddings/specs/: design.md  requirements.md  tasks.md
shared/helix-embeddings/src/: lib.rs
shared/helix-storage/: AGENTS.md  Cargo.toml  README.md
shared/helix-storage/specs/: design.md  requirements.md
shared/helix-storage/src/: lib.rs
(+296 files in other folders)
