[workspace]
resolver = "2"
members = [
    "demo-got",
    "helix-graph-ops",
    "hbd",
    "hbd-ui/src-tauri",
    "helix-decisions",
    "helix-docs",
    "helix-map",
    "helix-repo",
    "shared/helix-id",
    "shared/helix-config",
    "shared/helix-embeddings",
    "shared/helix-discovery",
    "shared/helix-daemon",
    # "shared/helix-embed",
    # "shared/helix-search",
    # "shared/helix-chunk",
]

[workspace.package]
version = "0.1.0"
edition = "2024"
license = "MIT"
repository = "https://github.com/kevinmichaelchen/helix-tools"
authors = ["Kevin Chen"]

[workspace.dependencies]
# HelixDB - Graph-vector database
helix-db = { git = "https://github.com/HelixDB/helix-db.git", features = ["vectors"] }

# Async runtime
tokio = { version = "1.40", features = ["full"] }

# CLI
clap = { version = "4.5", features = ["derive"] }

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_yaml = "0.9"

# Embeddings
fastembed = "4"

# Error handling
thiserror = "1.0"
anyhow = "1.0"

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# Git operations (requires OpenSSL - use vendored or system)
# Uncomment when ready: git2 = { version = "0.19", features = ["vendored-openssl"] }
gix = "0.68"  # Pure Rust alternative to libgit2

# File watching
notify = "6.1"

# Date/time
chrono = { version = "0.4", features = ["serde"] }

# UUID for hash-based IDs
uuid = { version = "1.10", features = ["v4"] }

# Hashing
blake3 = "1.5"
hex = "0.4"

# System info
whoami = "1.5"

# Markdown parsing
pulldown-cmark = "0.12"
pulldown-cmark-to-cmark = "17"

# YAML frontmatter
gray_matter = "0.2"

# Git hooks
husky-rs = "0.1"

[workspace.lints.rust]
unsafe_code = "warn"
rust_2018_idioms = { level = "warn", priority = -1 }

[workspace.lints.clippy]
# Correctness
correctness = { level = "deny", priority = -1 }

# Style & Readability
style = { level = "warn", priority = -1 }
pedantic = { level = "warn", priority = -1 }

# Complexity
cognitive_complexity = "warn"

# Performance
perf = { level = "warn", priority = -1 }

# Suspicious patterns
suspicious = { level = "warn", priority = -1 }

# Nursery (experimental but useful)
nursery = { level = "warn", priority = -1 }

# Specific relaxations for pedantic noise
module_name_repetitions = "allow"
must_use_candidate = "allow"
missing_errors_doc = "allow"
missing_panics_doc = "allow"
too_many_arguments = "allow"
items_after_statements = "allow"
implicit_hasher = "allow"
