[package]
name = "helix-decisions"
version = "0.1.0"
edition = "2024"
description = "Decision graph infrastructure: semantic search, relationship tracking, and immutable records"
license = "MIT"
repository = "https://github.com/kevinmichaelchen/helix-tools"
keywords = ["decisions", "adr", "graph", "semantic-search", "ai"]
categories = ["command-line-utilities", "development-tools"]

[dependencies]
clap = { version = "4", features = ["derive"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde_yaml = "0.9"
gray_matter = "0.2"
sha2 = "0.10"
chrono = { version = "0.4", features = ["serde"] }
anyhow = "1"
thiserror = "2"
uuid = { version = "1", features = ["v4"] }
bincode = "1.3"
bumpalo = { version = "3", features = ["collections"] }
heed3 = "0.22.0"

helix-id = { path = "../shared/helix-id" }
helix-config = { path = "../shared/helix-config" }
helix-embeddings = { path = "../shared/helix-embeddings" }
helix-discovery = { path = "../shared/helix-discovery" }
helix-daemon = { path = "../shared/helix-daemon" }
helix-db = { git = "https://github.com/HelixDB/helix-db.git", features = ["vectors"] }
helix-graph-ops = { path = "../helix-graph-ops" }
tokio = { version = "1", features = ["rt-multi-thread", "macros"] }

[dev-dependencies]
tempfile = "3"

[[bin]]
name = "helix-decisions"
path = "src/main.rs"

[lib]
name = "helix_decisions"
path = "src/lib.rs"
