[package]
name = "helix-repo"
version = "0.1.0"
edition = "2024"
description = "Manage git repository clones for helix-tools"
license = "MIT"
repository = "https://github.com/kevinmichaelchen/helix-tools"
keywords = ["git", "clone", "repository", "helix"]
categories = ["command-line-utilities", "development-tools"]

[dependencies]
# CLI
clap = { version = "4", features = ["derive"] }

# URL parsing
url = "2"

# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"
toml = "0.8"

# Error handling
thiserror = "2"
anyhow = "1"

# Async runtime
tokio = { version = "1", features = ["full"] }

# Platform directories
dirs = "6"

# Shared libraries
# helix-config = { path = "../shared/helix-config" }

[dev-dependencies]
tempfile = "3"

[features]
default = []

[[bin]]
name = "helix-repo"
path = "src/main.rs"

[lib]
name = "helix_repo"
path = "src/lib.rs"
