[package]
name = "ix-mcp"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true
description = "Ixchel MCP server"
readme = "README.md"
keywords = ["mcp", "agent", "knowledge-graph"]
categories = ["development-tools"]

[dependencies]
anyhow.workspace = true
ix-core = { path = "../ix-core" }
ix-storage-helixdb = { path = "../ix-storage-helixdb" }
serde.workspace = true
serde_json.workspace = true
serde_yaml.workspace = true
tokio.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true

[lints]
workspace = true

[[bin]]
name = "ixchel-mcp"
path = "src/main.rs"
