[package]
name = "demo-got"
version = "0.1.0"
edition = "2024"
description = "Game of Thrones family tree graph demo with pluggable storage backends"
license = "MIT"
repository = "https://github.com/kevinmichaelchen/ixchel"
publish = false  # Demo only, not for distribution
keywords = ["demo", "graph", "helixdb", "surrealdb", "game-of-thrones"]
categories = ["command-line-utilities"]

[dependencies]
clap = { version = "4", features = ["derive"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde_yaml = "0.9"
anyhow = "1"
thiserror = "2"
uuid = { version = "1", features = ["v4"] }
bumpalo = { version = "3", features = ["collections"] }
heed3 = "0.22.0"
helix-db = { git = "https://github.com/HelixDB/helix-db.git", features = ["vectors"] }
ix-helixdb-ops = { path = "../../crates/ix-helixdb-ops" }
ix-embeddings = { path = "../../crates/ix-embeddings", features = ["candle"] }
surrealdb.workspace = true
tokio = { workspace = true, features = ["rt-multi-thread"] }

[features]
default = []
metal = ["ix-embeddings/metal"]

[dev-dependencies]
tempfile = "3"

[[bin]]
name = "demo-got"
path = "src/main.rs"

[lib]
name = "demo_got"
path = "src/lib.rs"
