[package]
name = "ix-mcp"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true
description = "Ixchel MCP server"
homepage = "https://kevinmichaelchen.github.io/ixchel"
readme = "README.md"
keywords = ["mcp", "agent", "knowledge-graph"]
categories = ["development-tools"]

[dependencies]
anyhow.workspace = true
ix-app = { path = "../../crates/ix-app", version = "0.1.0" }
ix-core = { path = "../../crates/ix-core", version = "0.1.0" }
serde.workspace = true
serde_json.workspace = true
serde_yaml.workspace = true
tokio.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true

[features]
default = []
# Note: helixdb feature removed - not available from crates.io (see ix-app/Cargo.toml)

[lints]
workspace = true

[[bin]]
name = "ixchel-mcp"
path = "src/main.rs"

[package.metadata.binstall]
pkg-url = "{ repo }/releases/download/v{ version }/{ name }-{ version }-{ target }{ archive-suffix }"
pkg-fmt = "tgz"
