[package]
name = "ix-app"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true
description = "Ixchel wiring layer for apps (backend selection + orchestration)"
readme = "README.md"
keywords = ["ixchel", "orchestration", "wiring"]
categories = ["development-tools"]

[dependencies]
anyhow.workspace = true
ix-core = { path = "../ix-core", version = "0.2.0" }
ix-storage-surrealdb = { path = "../ix-storage-surrealdb", version = "0.2.0" }

[features]
default = []

[lints]
workspace = true

# =============================================================================
# HelixDB Backend Support
# =============================================================================
#
# The helixdb feature and ix-storage-helixdb dependency are intentionally
# excluded from this published crate because:
#
# 1. ix-storage-helixdb depends on helix-db which uses a git URL
# 2. crates.io does not allow git dependencies
# 3. helix-db hasn't been published to crates.io in 6+ months
#
# Impact:
# - `cargo install ix-cli` from crates.io: SurrealDB backend only
# - `cargo binstall ix-cli`: Both backends (binary built from source)
# - Building from git: Both backends (add ix-storage-helixdb to dependencies)
#
# To enable HelixDB when building from source, add to your Cargo.toml:
#   [dependencies]
#   ix-storage-helixdb = { git = "https://github.com/kevinmichaelchen/ixchel" }
#
# And add the feature flag to ix-app:
#   [features]
#   helixdb = ["ix-app/helixdb"]

