[package]
name = "ix-config"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true
description = "Hierarchical configuration loading for Ixchel"
readme = "README.md"
keywords = ["config", "toml", "settings"]
categories = ["config"]

[dependencies]
serde.workspace = true
toml = "0.8"
thiserror.workspace = true
dirs = "5"

[lints]
workspace = true
