[package]
name = "ix-embeddings"
version = "0.1.0"
edition = "2024"
license = "MIT"
repository = "https://github.com/kevinmichaelchen/helix-tools"
description = "Shared embedding infrastructure for Ixchel with pluggable providers"
readme = "README.md"
keywords = ["embeddings", "fastembed", "candle", "vector", "semantic-search"]
categories = ["text-processing", "development-tools"]

[lib]
name = "ix_embeddings"
path = "src/lib.rs"

[features]
default = ["fastembed"]
fastembed = ["dep:fastembed"]
candle = ["dep:candle-core", "dep:candle-nn", "dep:candle-transformers", "dep:hf-hub", "dep:tokenizers", "dep:serde_json"]
metal = ["candle-core/metal", "candle-nn/metal", "candle-transformers/metal"]
cuda = ["candle-core/cuda", "candle-nn/cuda", "candle-transformers/cuda"]

[dependencies]
thiserror = "2"
ix-config = { path = "../ix-config" }

# FastEmbed provider (default)
fastembed = { version = "4", optional = true }

# Candle provider
candle-core = { version = "0.8", optional = true }
candle-nn = { version = "0.8", optional = true }
candle-transformers = { version = "0.8", optional = true }
hf-hub = { version = "0.4", optional = true }
tokenizers = { version = "0.21", optional = true }
serde_json = { version = "1", optional = true }

[lints]
workspace = true
