[package]
name = "ix-storage-helixdb"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true
description = "HelixDB-backed storage adapter for Ixchel"
readme = "README.md"
keywords = ["helixdb", "storage", "knowledge-graph"]
categories = ["database"]

[dependencies]
anyhow.workspace = true
bincode = "1.3"
blake3.workspace = true
bumpalo = { version = "3", features = ["collections"] }
heed3 = "0.22.0"
helix-db.workspace = true
ix-helixdb-ops = { path = "../ix-helixdb-ops" }
ix-embeddings = { path = "../ix-embeddings" }
ix-core = { path = "../ix-core" }
serde_json.workspace = true
serde_yaml.workspace = true
uuid.workspace = true

[lints]
workspace = true

[dev-dependencies]
tempfile = "3"
