[package]
name = "helix-storage"
version = "0.1.0"
edition = "2024"
license = "MIT"
repository = "https://github.com/kevinmichaelchen/helix-tools"
description = "Trait-based storage abstraction for helix-tools with project-local persistence"
readme = "README.md"
keywords = ["storage", "embeddings", "vector-search", "persistence"]
categories = ["database", "development-tools"]

[lib]
name = "helix_storage"
path = "src/lib.rs"

[dependencies]
# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# Error handling
thiserror = "2"
anyhow = "1"

# Hashing for project identification
blake3 = "1.5"
hex = "0.4"

# Shared crates
helix-config = { path = "../helix-config" }

[dev-dependencies]
tempfile = "3"

[lints]
workspace = true
