[package]
name = "hbd-ui"
version.workspace = true
edition = "2021"
license.workspace = true
repository.workspace = true
authors.workspace = true
description = "Desktop UI for hbd issue tracker"
rust-version = "1.77.2"

[lib]
name = "hbd_ui_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
serde_json = { workspace = true }
serde = { workspace = true }
log = "0.4"
tauri = { version = "2", features = [] }
tauri-plugin-log = "2"
hbd = { path = "../../hbd" }

[lints]
workspace = true
